Fixed Sections Gaps

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,7 +22,7 @@
    border: 2px solid black;
    border-radius: 8px;
    position: relative;
-   top: 300px;
+   top: 200px;
    opacity: 90%;
     text-align: center;
    font-family: cursive;
@@ -86,6 +86,7 @@
    overflow-x: scroll;
    position: relative;
    top: -100px;
+   
 }
 
 .image {
@@ -141,11 +142,6 @@
    background-color:#ecd2cf ;
 }
 
-.review-item.prev,
-.review-item.next {
-   
-}
-
 .review-item.prev {transform: translateX(-75%);}
 .review-item.next {transform: translateX(75%);}
 
@@ -153,7 +149,6 @@
    padding-bottom: 2.5rem;
    text-align: left;
 }
-
 
 .review-author {
    display: flex;
